--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,30 @@
-
+body{
+  font-family: 'Merriweather Sans', sans-serif;
+}
+.navCont{
+  width: 100%;
+  height: 6.5vh;
+  background: rgb(55,53,55);
+  color: rgb(216,214,216);
+}
+.nav{
+  display: flex;
+  width: 56%;
+  justify-content: space-between;
+}
+.hamburger{
+  margin-top: 5%;
+  margin-left: 5%;
+  width: 27px;
+  height: 22px;
+}
+.profileText{
+  font-size: 17px;
+  margin-top: 6%;
+  letter-spacing: 1px;
+}
+.header{
+  width: 100%;
+  height: 30%;
+  background-image: url("./images/bkg-header.jpg");
+}
