--- a/src/App.css
+++ b/src/App.css
@@ -9,22 +9,39 @@ body{
 }
 .nav{
   display: flex;
-  width: 56%;
+  width: 55%;
   justify-content: space-between;
 }
 .hamburger{
-  margin-top: 5%;
-  margin-left: 5%;
+  margin-top: 11px;
+  margin-left: 11px;
   width: 27px;
   height: 22px;
 }
 .profileText{
   font-size: 17px;
-  margin-top: 6%;
+  margin-top: 13px;
   letter-spacing: 1px;
 }
 .header{
+  display: flex;
   width: 100%;
-  height: 30%;
-  background-image: url("./images/bkg-header.jpg");
+  height: 163px;
+  box-shadow: 0 3px 15px #888888;
+  position: relative;
+  top: 0;
+  left: 0;
+  justify-content: center;
+}
+.background{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.profilePic{
+  width: 220px;
+  position: absolute;
+  top: 20%;
 }
