--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
 body{
   font-family: 'Merriweather Sans', sans-serif;
 }
@@ -26,7 +30,7 @@ body{
 .header{
   display: flex;
   width: 100%;
-  height: 163px;
+  height: 168px;
   box-shadow: 0 3px 15px #888888;
   position: relative;
   top: 0;
@@ -41,7 +45,7 @@ body{
   left: 0;
 }
 .profilePic{
-  width: 220px;
+  width: 215px;
   position: absolute;
-  top: 20%;
+  top: 17%;
 }
