--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 html, body {
   margin: 0;
   padding: 0;
-}
-body{
   font-family: 'Merriweather Sans', sans-serif;
 }
 .navCont{
   width: 100%;
-  height: 6.5vh;
+  height: 6.3vh;
   background: rgb(55,53,55);
   color: rgb(216,214,216);
 }
@@ -30,7 +28,7 @@ body{
 .header{
   display: flex;
   width: 100%;
-  height: 168px;
+  height: 158px;
   box-shadow: 0 3px 15px #888888;
   position: relative;
   top: 0;
@@ -45,7 +43,47 @@ body{
   left: 0;
 }
 .profilePic{
-  width: 215px;
+  width: 200px;
   position: absolute;
-  top: 17%;
+  top: 19%;
+}
+.form{
+  position: absolute;
+  top: 37%;
+  margin-left: 6%;
+  margin-right: 6%;
+  display: flex;
+  width: 86%;
+  color: rgb(157,155,157);
+}
+input, textarea{
+  width: 100%;
+  height: 45px;
+  background: rgb(236,234,236);
+  border-radius: 5%;
+  font-size: 15px;
+  border: rgb(245,244,244);
+  margin-top: 4px;
+  margin-bottom: 5px;
+  color: rgb(157,155,157);
+  padding-left: 10px;
+}
+textarea{
+  height: 110px;
+  resize: none;
+  padding-top: 10px;
+}
+.submit{
+  position: absolute;
+  top: 100%;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.submitButton{
+  width: 150px;
+  height: 40%;
+  margin-top: 10px;
 }
