--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,14 @@ textarea{
   margin-right: 5%;
 }
 .submitButton{
-  width: 150px;
+  width: 130px;
   height: 40%;
-  margin-top: 10px;
+  margin-top: 3px;
+}
+.footer{
+  background: rgb(236,234,236);
+  width: 100%;
+  height: 25px;
+  position: absolute;
+  top: 97%;
 }
