have nav changing responsively

--- a/src/App.css
+++ b/src/App.css
@@ -5,30 +5,33 @@ html, body {
 }
 .navCont{
   width: 100%;
-  height: 6.3vh;
+  height: 6.8vh;
   background: rgb(55,53,55);
   color: rgb(216,214,216);
 }
 .nav{
   display: flex;
   width: 55%;
+  max-width: 760px;
+  height: 100%;
   justify-content: space-between;
 }
 .hamburger{
-  margin-top: 11px;
-  margin-left: 11px;
-  width: 27px;
-  height: 22px;
+  margin-top: 1.5vh;
+  margin-left: 1.5vh;
+  width: 10%;
+  max-width: 40px;
+  height: 45%;
 }
 .profileText{
-  font-size: 17px;
-  margin-top: 13px;
+  font-size: 2.7vh;
+  margin-top: 1.5vh;
   letter-spacing: 1px;
 }
 .header{
   display: flex;
   width: 100%;
-  height: 158px;
+  height: 20vh;
   box-shadow: 0 3px 15px #888888;
   position: relative;
   top: 0;
@@ -43,24 +46,27 @@ html, body {
   left: 0;
 }
 .profilePic{
-  width: 200px;
+  height: 130%;
   position: absolute;
   top: 19%;
 }
-.form{
-  position: absolute;
-  top: 37%;
+.formContainer{
   margin-left: 6%;
   margin-right: 6%;
+  margin-top: 65px;
   display: flex;
+  justify-content: center;
   width: 86%;
   color: rgb(157,155,157);
 }
+label{
+  font-size: 15px;
+}
 input, textarea{
   width: 100%;
-  height: 45px;
+  height: 46px;
   background: rgb(236,234,236);
-  border-radius: 5%;
+  border-radius: 7px;
   font-size: 15px;
   border: rgb(245,244,244);
   margin-top: 4px;
@@ -73,24 +79,24 @@ textarea{
   resize: none;
   padding-top: 10px;
 }
-.submit{
-  position: absolute;
-  top: 100%;
+.submitContainer{
   display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  margin-left: 5%;
-  margin-right: 5%;
+  justify-content: center;
+  width: 86%;
+  margin-right: 6%;
+  margin-left: 6%;
 }
 .submitButton{
-  width: 130px;
-  height: 40%;
+  width: 160px;
+  height: 10%;
   margin-top: 3px;
+  margin-left: 65%;
+  margin-bottom: 10px;
 }
 .footer{
   background: rgb(236,234,236);
   width: 100%;
   height: 25px;
   position: absolute;
-  top: 97%;
+  bottom: 0;
 }
