form placement is responsive

--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,10 @@ html, body {
   top: 19%;
 }
 .formContainer{
-  margin-left: 6%;
+  margin: 10vh 6% 0 6%;
+  /*margin-left: 6%;
   margin-right: 6%;
-  margin-top: 65px;
+  margin-top: 65px;*/
   display: flex;
   justify-content: center;
   width: 86%;
