--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ html, body {
   display: flex;
   width: 100%;
   height: 20vh;
-  box-shadow: 0 3px 15px #888888;
+  box-shadow: 0 1.5px 12px dimgray;
   position: relative;
   top: 0;
   left: 0;
@@ -51,32 +51,31 @@ html, body {
   top: 19%;
 }
 .formContainer{
-  margin: 10vh 6% 0 6%;
-  /*margin-left: 6%;
-  margin-right: 6%;
-  margin-top: 65px;*/
+  margin: 9vh 6% 0 6%;
   display: flex;
   justify-content: center;
   width: 86%;
+  height: 52vh;
+  max-height: 580px;
   color: rgb(157,155,157);
 }
 label{
-  font-size: 15px;
+  font-size: 2.0vh;
 }
 input, textarea{
   width: 100%;
-  height: 46px;
+  height: 10%;
   background: rgb(236,234,236);
   border-radius: 7px;
-  font-size: 15px;
+  font-size: 2.0vh;
   border: rgb(245,244,244);
-  margin-top: 4px;
-  margin-bottom: 5px;
+  margin-top: 1%;
+  margin-bottom: 1%;
   color: rgb(157,155,157);
   padding-left: 10px;
 }
 textarea{
-  height: 110px;
+  height: 30%;
   resize: none;
   padding-top: 10px;
 }
@@ -88,9 +87,9 @@ textarea{
   margin-left: 6%;
 }
 .submitButton{
-  width: 160px;
+  width: 20vh;
   height: 10%;
-  margin-top: 3px;
+  margin-top: 1%;
   margin-left: 65%;
   margin-bottom: 10px;
 }
