--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Merriweather', serif;
 }
 .navCont{
   width: 100%;
@@ -11,7 +11,7 @@ html, body {
 }
 .nav{
   display: flex;
-  width: 56.2vw;
+  width: 56.5vw;
   max-width: 760px;
   height: 100%;
   justify-content: space-between;
@@ -20,13 +20,14 @@ html, body {
 .hamburger{
   margin-top: 1.5vh;
   margin-left: 1.5vh;
-  width: 10%;
+  width: 11%;
   max-width: 40px;
   height: 45%;
 }
 .profileText{
   font-size: 2.7vh;
   margin-top: 1.5vh;
+  font-weight: 700;
 }
 .header{
   display: flex;
@@ -69,10 +70,11 @@ input, textarea{
   border-radius: 7px;
   font-size: 2.0vh;
   border: rgb(245,244,244);
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin-top: 1.2%;
+  margin-bottom: 1.2%;
   color: rgb(157,155,157);
   padding-left: 10px;
+  font-family: 'Merriweather', serif;
 }
 textarea{
   height: 30%;
@@ -89,7 +91,7 @@ textarea{
 .submitButton{
   width: 20vh;
   height: 10%;
-  margin-top: 1%;
+  margin-top: 1.3%;
   margin-left: 65%;
   margin-bottom: 10px;
 }
