--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -3,21 +3,26 @@
   height: 6.8vh;
   background: rgb(55,53,55);
   color: rgb(216,214,216);
+  display: flex;
 }
 .nav{
-  display: flex;
-  width: 56.5vw;
-  max-width: 760px;
+  width: 30%;
+  /*width: 56.5vw;*/
+  /*max-width: 760px;*/
   height: 100%;
-  justify-content: space-between;
-
+  /*justify-content: space-between;*/
 }
 .hamburger{
   margin-top: 1.5vh;
   margin-left: 1.5vh;
-  width: 11%;
+  width: 26%;
   max-width: 40px;
   height: 45%;
+}
+.profileContainer{
+  width: 40%;
+  display: flex;
+  justify-content: center;
 }
 .profileText{
   font-size: 2.7vh;
