--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   width: 86%;
-  height: 52.5vh;
-  max-height: 580px;
+  height: 52.6vh;
+  max-height: 700px;
   color: rgb(157,155,157);
 }
 label{
@@ -12,7 +12,6 @@ label{
 }
 input, textarea{
   width: 100%;
-  height: 10.4%;
   background: rgb(236,234,236);
   border-radius: 7px;
   font-size: 1.8vh;
@@ -23,8 +22,13 @@ input, textarea{
   padding-left: 10px;
   font-family: 'Merriweather', serif;
 }
+input{
+  height: 10.4%;
+  max-height: 6vh;
+}
 textarea{
   height: 30%;
+  max-height: 20vh;
   resize: none;
   padding-top: 10px;
 }
@@ -38,6 +42,7 @@ textarea{
 .submitButton{
   width: 20vh;
   height: 10%;
+  max-height: 7.5vh;
   margin-top: 1.3%;
   margin-left: 65%;
   margin-bottom: 10px;
